Alterações do Código
Novas modificações e correções de código e imagem

--- a/Projeto_GitHub/css/style.css
+++ b/Projeto_GitHub/css/style.css
@@ -14,11 +14,12 @@ body {
 }
 
 hr {
-    margin: 50px 0;
+    margin: 0 0 50px 0;
 }
 
 .lista {
     padding-left: 60px;
+    margin: 0 0 50px 0;
 }
 
 img {
